--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -264,6 +264,7 @@
                     <input type="hidden" id="new_month" name="new_month" value="">
                     <input type="hidden" id="new_year" name="new_year" value="">
                     <input type="hidden" id="source" name="source" value="{{ source }}">
+                    <input type="hidden" id="new_stat" name="new_stat" value="1">
                 </div>
                 <table class="table-calendar" id="calendar" data-lang="en">
                     <thead id="thead-month"></thead>
