--- a/templates/data.html
+++ b/templates/data.html
@@ -207,6 +207,23 @@
             </div>
       </div>
     </div>
+
+    <div class="box-container">
+      <div class="box1-content content">
+        <h1>ELF spectrogram</h1>
+{#          <img class="img1" src="{% static 'map.jpg' %}">#}
+{#          <br>#}
+{#        <p> </p>#}
+            <div class="box1-side">
+                <form method="post" id="elf">
+                    <br>
+                    <button type="submit" formaction="/date-selection" class="button" style="font-size:25px; justify-content: center">Data</button>
+                    <input type="hidden" id="source" name="source" value="elf">
+                </form>
+            </div>
+      </div>
+    </div>
+
 {#    <div class="mdl-grid">#}
 {#      <div class="mdl-cell mdl-cell--4-col">4</div>#}
 {#      <div class="mdl-cell mdl-cell--4-col">4</div>#}
