--- a/templates/elf.html
+++ b/templates/elf.html
@@ -62,6 +62,7 @@
             </table>
         </form>
     </div>
+    <br> <br>
     <style>
         .new1 div {
           border: 1px solid #0e0e0e;
@@ -186,21 +187,154 @@
         }
         .active .close:hover { transform: translate(0%, -100%) rotate(.5turn); transition: 1s ease; }
 
+        {#table, th, td {#}
+        {#    border:1px solid black;#}
+        {#    border-collapse: collapse;#}
+        {#}#}
+
     </style>
 
-    <div class="row">
-        {% for image in images %}
-          <div class="column">
-            <img src="img_snow.jpg" alt="Snow" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="img_forest.jpg" alt="Forest" style="width:100%">
-          </div>
-          <div class="column">
-            <img src="img_mountains.jpg" alt="Mountains" style="width:100%">
-          </div>
-        {% endfor %}
-    </div>
+    <table style="border:1px solid white; border-radius: 5px; width:80%; border-collapse: collapse; margin-left: 10%">
+        <tr>
+            <th colspan="2" style="border:1px solid white; border-collapse: collapse; height: 50px; text-align: center; font-size: 2.2vw; font-family: Roboto, sans-serif; font-weight: 300">0-0.05 Hz</th>
+        </tr>
+        <tr>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>
+            </td>
+        </tr>
+        <tr>
+            {% for im in group1 %}
+                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">
+{#                    <br>#}
+                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">
+{#                    <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+                    <br> <br>
+                </td>
+            {% endfor %}
+        </tr>
+
+        <tr>
+            <th colspan="2" style="border:1px solid white; border-collapse: collapse; height: 50px; text-align: center; font-size: 2.2vw; font-family: Roboto, sans-serif; font-weight: 300">0-0.4 Hz</th>
+        </tr>
+        <tr>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>
+            </td>
+        </tr>
+        <tr>
+            {% for im in group2 %}
+                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">
+{#                    <br>#}
+                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">
+{#                    <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+                    <br> <br>
+                </td>
+            {% endfor %}
+        </tr>
+        <tr>
+            <th colspan="2" style="border:1px solid white; border-collapse: collapse; height: 50px; text-align: center; font-size: 2.2vw; font-family: Roboto, sans-serif; font-weight: 300">0-4 Hz</th>
+        </tr>
+        <tr>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>
+            </td>
+        </tr>
+        <tr>
+            {% for im in group3 %}
+                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">
+{#                    <br>#}
+                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">
+{#                    <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+                    <br> <br>
+                </td>
+            {% endfor %}
+        </tr>
+    </table>
+{#    <br>#}
+
+    <table style="border:1px solid white; border-radius: 5px; width:80%; border-collapse: collapse; margin-left: 10%">
+        <tr>
+            <th colspan="3" style="border:1px solid white; border-collapse: collapse; height: 50px; text-align: center; font-size: 2.2vw; font-family: Roboto, sans-serif; font-weight: 300">0-50 Hz</th>
+        </tr>
+
+        <tr>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>z</sub>
+            </td>
+        </tr>
+        <tr>
+            {% for im in group4 %}
+                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">
+{#                    <br>#}
+                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">
+{#                    <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+                    <br> <br>
+                </td>
+            {% endfor %}
+        </tr>
+{#        <tr>#}
+{#            {% for im in group4 %}#}
+{#                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>#}
+{#                    <br>#}
+{#                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">#}
+{#                    <br> <br>#}
+{#                </td>#}
+{#            {% endfor %}#}
+{#            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>#}
+{#                <br>#}
+{#                <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+{#                <br> <br>#}
+{#            </td>#}
+{#            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>z</sub>#}
+{#                <br>#}
+{#                <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+{#                <br> <br>#}
+{#            </td>#}
+{#        </tr>#}
+    </table>
+
+    <table style="border:1px solid white; border-radius: 5px; width:80%; border-collapse: collapse; margin-left: 10%">
+        <tr>
+            <th colspan="2" style="border:1px solid white; border-collapse: collapse; height: 50px; text-align: center; font-size: 2.2vw; font-family: Roboto, sans-serif; font-weight: 300">50-100 Hz</th>
+        </tr>
+        <tr>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>x</sub>
+            </td>
+            <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 50px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">H<sub>y</sub>
+            </td>
+        </tr>
+        <tr>
+            {% for im in group5 %}
+                <td style="border:1px solid white; border-collapse: collapse; text-align: center; height: 150px; font-size: 1.7vw; font-family: Roboto, sans-serif; font-weight: 300">
+{#                    <br>#}
+                    <img id="img_{{ im }}" src='{{ im }}' style="width: 80%;">
+{#                    <img src="{% static 'test_1.jpg' %}" style="width: 80%">#}
+                    <br> <br>
+                </td>
+            {% endfor %}
+        </tr>
+    </table>
+
+{#    <div class="row">#}
+{#        {% for image in images %}#}
+{#          <div class="column">#}
+{#            <img src="img_snow.jpg" alt="Snow" style="width:100%">#}
+{#          </div>#}
+{#          <div class="column">#}
+{#            <img src="img_forest.jpg" alt="Forest" style="width:100%">#}
+{#          </div>#}
+{#          <div class="column">#}
+{#            <img src="img_mountains.jpg" alt="Mountains" style="width:100%">#}
+{#          </div>#}
+{#        {% endfor %}#}
+{#    </div>#}
 
 {#    <div class="outer-grid">#}
 {#    <div class="grid">#}
@@ -237,12 +371,6 @@
 
     <script>
 
-    // Убрать!
-    {#img = document.getElementById("img1");#}
-    {#function largeImg() {#}
-    {#    img.style.transform = "scale(1.5)";#}
-    {#}#}
-
         const oGallery = document.querySelector('.gallery');
         oGallery.addEventListener('click', function(ev) {
           if (ev.target.tagName != 'IMG') { return false; }
@@ -273,31 +401,20 @@
           oGallery.classList.toggle('show', true);
         });
 
-
-        function stat(){
-            let selectStat = document.getElementById('stations');
-            for (var i = 0; i < 32; i++){
-                selectStat.options[selectStat.options.length] = new Option((i+1).toString(), i.toString());
-            }
-        }
-        stat();
-        const selectStat = document.getElementById('stations');
-        selectStat.selectedIndex = {{ new_stat }} - 1;
-
-        function view_data() {
-               const selectStat = document.getElementById('stations');
-                let currentStat = selectStat.options[selectStat.selectedIndex].text;
-                const new_stat = document.getElementById("new_stat");
-                new_stat.value = currentStat;
-                let currentMonth = '{{ current_month }}';
-                let currentYear = '{{ current_year }}';
-                let currentDay = '{{ current_day }}';
-                const new_day = document.getElementById("new_day");
-                new_day.value = currentDay;
-                const new_month = document.getElementById("new_month");
-                new_month.value = currentMonth;
-                const new_year = document.getElementById("new_year");
-                new_year.value = currentYear;
+        {#function view_data() {#}
+        {#       const selectStat = document.getElementById('stations');#}
+        {#        let currentStat = selectStat.options[selectStat.selectedIndex].text;#}
+        {#        const new_stat = document.getElementById("new_stat");#}
+        {#        new_stat.value = currentStat;#}
+        {#        let currentMonth = '{{ current_month }}';#}
+        {#        let currentYear = '{{ current_year }}';#}
+        {#        let currentDay = '{{ current_day }}';#}
+        {#        const new_day = document.getElementById("new_day");#}
+        {#        new_day.value = currentDay;#}
+        {#        const new_month = document.getElementById("new_month");#}
+        {#        new_month.value = currentMonth;#}
+        {#        const new_year = document.getElementById("new_year");#}
+        {#        new_year.value = currentYear;#}
                 {#const button_name = document.getElementById("new_stat");#}
                 {#button_name.value = 'view_data';#}
         }
