--- a/templates/data.html
+++ b/templates/data.html
@@ -201,7 +201,7 @@
             <div class="box1-side">
                 <form method="post" id="vlf">
                     <br>
-                    <button type="submit" formaction="/date-selection" class="button" style="font-size:25px; justify-content: center">Data</button>
+                    <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                     <input type="hidden" id="source" name="source" value="vlf">
                 </form>
             </div>
@@ -217,7 +217,7 @@
             <div class="box1-side">
                 <form method="post" id="elf">
                     <br>
-                    <button type="submit" formaction="/date-selection" class="button" style="font-size:25px; justify-content: center">Data</button>
+                    <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                     <input type="hidden" id="source" name="source" value="elf">
                 </form>
             </div>
@@ -370,7 +370,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="lem">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
+                <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="lem">
             </form>
            </div>
@@ -386,7 +386,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="k_ind">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
+                <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="k_ind">
             </form>
            </div>
@@ -402,7 +402,7 @@
 {#               # TODO ИЗМЕНИТЬ ПОТОМ#}
             <form method="post" id="meteo">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
+                <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="meteo">
             </form>
            </div>
@@ -475,7 +475,7 @@
           <div class="box1-side">
             <form method="post" id="tec">
                 <br>
-                <button type="submit" formaction="/date-selection" class="button" style="font-size:28px; justify-content: center">Data</button>
+                <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center">Data</button>
                 <input type="hidden" id="source" name="source" value="tec">
             </form>
           </div>
