--- a/templates/gps.html
+++ b/templates/gps.html
@@ -7,7 +7,8 @@
 {% load static %}
 
 {% block content %}
-    <div class="fw-bold">
+{#    <div class="fw-bold">#}
+    <div>
         <style>
             .btn {
                 float: left;
@@ -65,19 +66,13 @@
             }
         </style>
         <form method="post" id="date_form">
-{#        <a href="/date-selection" class="btn">Back to date picker</a>#}
-
             <table class="center">
                 <td class="child">
-{#                <div class="three-inline-buttons">#}
-{#                <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">#}
-{#                        <div class="col d-flex" style="justify-content: center; align-items: center">#}
                     <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: right;" value="Previous day" onclick="previous()">
                 </td>
                 <td class="child" style="text-align: center;">
                     <input class="btn_up" type="submit" formaction="/date-selection" style="text-align:center;" value="Calendar">
                 </td>
-{#                    </form>#}
                 <td class="child">
                     <input class="btn_up" type="submit" formaction="/get-vlf-data" style="float: left;" value="Next day" onclick="next()">
                 </td>
@@ -92,168 +87,157 @@
                 <br><br>
                 NO DATA FOR {{ current_day }}/{{ current_month }}/{{ current_year }}
             </span>
-{#            <input class="btn" type="submit" formaction="/date-selection" value="Back to date picker">#}
-{#            <input type="hidden" id="source" name="source" value="{{ source }}">#}
-        </form>
-{#        <a href="/" class="btn" style="float: right;">Home Page</a>#}
-    </div>
-    <style>
-        .new1 div {
-          border: 1px solid #0e0e0e;
-        }
+            <style>
+                .new1 div {
+                  border: 1px solid #0e0e0e;
+                }
 
-        .new1 .first-li {
-          grid-column-start: 3;
-          grid-column-end: 1;
-          {#grid-row-start: 1;#}
-          {#grid-row-end: 2;#}
-        }
+                .new1 .first-li {
+                  grid-column-start: 3;
+                  grid-column-end: 1;
+                  {#grid-row-start: 1;#}
+                  {#grid-row-end: 2;#}
+                }
 
-        * { box-sizing: border-box; }
-        body { margin: 0; border-color: #1a1e21; }
+                * { box-sizing: border-box; }
+                body { margin: 0; border-color: #1a1e21; }
 
-        .outer-grid {
-            display: flex;
-            flex-wrap: wrap;
-        }
+                .outer-grid {
+                    display: flex;
+                    flex-wrap: wrap;
+                }
 
-        .grid
-        {
-          display: grid;
-          grid-template-columns: 1fr;
-          {#grid-template-columns: 1fr 1fr;#}
-          {#grid-gap: 10px;#}
-          width: 100%;
-          min-width: 300px;
-          max-width: 700px;
-          margin-left: auto;
-          margin-right: auto;
-            float: left;
+                .grid
+                {
+                  display: grid;
+                  grid-template-columns: 1fr;
+                  {#grid-template-columns: 1fr 1fr;#}
+                  {#grid-gap: 10px;#}
+                  width: 100%;
+                  min-width: 300px;
+                  max-width: 700px;
+                  margin-left: auto;
+                  margin-right: auto;
+                    float: left;
 
 
-          {#background-color: #fbfbfc;#}
-          {#padding: 10px;#}
+                  {#background-color: #fbfbfc;#}
+                  {#padding: 10px;#}
 
-          min-height: 100vh;
-        }
+                  min-height: 100vh;
+                }
 
-        .grid__item
-        {
-          border-radius: 4px;
-            {#border: 1px solid #fbfbfc;#}
-            {#border: 1px solid #030303;#}
-          min-height: 20vh;
-        }
+                .grid__item
+                {
+                  border-radius: 4px;
+                    {#border: 1px solid #fbfbfc;#}
+                    {#border: 1px solid #030303;#}
+                  min-height: 20vh;
+                }
 
-        .grid__item--small
-        {
-            {#background-color: #fbfbfc;#}
-          {#background-color: #e5e9ea;#}
-            min-height: 20vh;
-            {#align-items: center;#}
-            justify-content: left;
-            float: left;
-            {#grid-column: 2;#}
-        }
+                .grid__item--small
+                {
+                    {#background-color: #fbfbfc;#}
+                  {#background-color: #e5e9ea;#}
+                    min-height: 20vh;
+                    {#align-items: center;#}
+                    justify-content: left;
+                    float: left;
+                    {#grid-column: 2;#}
+                }
 
-        .grid__item--big
-        {
-          {#background-color: #fbfbfc;#}
-          grid-row: 5 span;
-          justify-content: right;
-          float: right;
-          {#float: left;#}
-            grid-column: 1;
-        }
+                .grid__item--big
+                {
+                  {#background-color: #fbfbfc;#}
+                  grid-row: 5 span;
+                  justify-content: right;
+                  float: right;
+                  {#float: left;#}
+                    grid-column: 1;
+                }
 
-        .btn_view {
-                display: inline-flex;
-                background: #68819a;
-            {#font-size: 16px;#} width: 140px;
-                height: 45px;
-                color: #ffffff;
-                font-size: 20px;
-                font-family: 'Roboto', sans-serif;
-                border: #68819a;
-                border-radius: 8px;
-                margin: auto;
-                justify-content: center;
-                align-items: center;
-                vertical-align: center;
-        }
+                .btn_view {
+                        display: inline-flex;
+                        background: #68819a;
+                    {#font-size: 16px;#} width: 140px;
+                        height: 45px;
+                        color: #ffffff;
+                        font-size: 20px;
+                        font-family: 'Roboto', sans-serif;
+                        border: #68819a;
+                        border-radius: 8px;
+                        margin: auto;
+                        justify-content: center;
+                        align-items: center;
+                        vertical-align: center;
+                }
 
-        .btn_view:hover {
-                background: #5c748c;
-                color: #f8f6f6;
-        }
+                .btn_view:hover {
+                        background: #5c748c;
+                        color: #f8f6f6;
+                }
 
 
-        {#body { margin: 0; height: 100vh; overflow: hidden; background: 0% 0% / auto no-repeat url('https://i.stack.imgur.com/m9NKc.png'), #58555c; }#}
-        .gallery {
-          position: relative; display: flex; flex-flow: row wrap;
-          justify-content: space-evenly; align-items: center;
-          height: 100%; width: 90%; margin: 0 auto;
-          background-color: #fff;
-        }
-        .gallery img {
-          height: auto; width: 200px; margin: 10px;
-          {#box-shadow: 0 0 0 5px #fff, 0 0 0 6px #919191;#}
-          {#transition: .5s linear; cursor: pointer;#}
-        }
-        .show img { opacity: .25; pointer-events: none; }
-        .active {
-          transition: box-shadow .5s linear .5s;
-          {#transition: box-shadow .5s linear .5s, top 1s ease-out, left 1s ease-out, transform 1s ease-out, width 1s ease-in, height 1s ease-in;#}
-          {#box-shadow: 0 0 0 10px #fff; filter: drop-shadow(1px 2px 6px #000);#}
-          pointer-events: none;
-        }
-        .close {
-          position: relative; left: 100%;
-          height: 20px; width: 20px;
-          transform: translate(0%, -100%);
-          border-radius: 50%;
-          box-shadow: 0 0 0 2px #fff, 0 0 2px 2px #000;
-          font: bold 20px/20px Arial; text-align: center;
-          background-color: #000; color: #fff;
-          pointer-events: auto; cursor: pointer;
-          {#transition: 1s linear; opacity: 0;#}
-          {#transition: 1s linear; opacity: 0;#}
-        }
-        .active .close:hover { transform: translate(0%, -100%) rotate(.5turn); transition: 1s ease; }
+                {#body { margin: 0; height: 100vh; overflow: hidden; background: 0% 0% / auto no-repeat url('https://i.stack.imgur.com/m9NKc.png'), #58555c; }#}
+                .gallery {
+                  position: relative; display: flex; flex-flow: row wrap;
+                  justify-content: space-evenly; align-items: center;
+                  height: 100%; width: 90%; margin: 0 auto;
+                  background-color: #fff;
+                }
+                .gallery img {
+                  height: auto; width: 200px; margin: 10px;
+                  {#box-shadow: 0 0 0 5px #fff, 0 0 0 6px #919191;#}
+                  {#transition: .5s linear; cursor: pointer;#}
+                }
+                .show img { opacity: .25; pointer-events: none; }
+                .active {
+                  transition: box-shadow .5s linear .5s;
+                  {#transition: box-shadow .5s linear .5s, top 1s ease-out, left 1s ease-out, transform 1s ease-out, width 1s ease-in, height 1s ease-in;#}
+                  {#box-shadow: 0 0 0 10px #fff; filter: drop-shadow(1px 2px 6px #000);#}
+                  pointer-events: none;
+                }
+                .close {
+                  position: relative; left: 100%;
+                  height: 20px; width: 20px;
+                  transform: translate(0%, -100%);
+                  border-radius: 50%;
+                  box-shadow: 0 0 0 2px #fff, 0 0 2px 2px #000;
+                  font: bold 20px/20px Arial; text-align: center;
+                  background-color: #000; color: #fff;
+                  pointer-events: auto; cursor: pointer;
+                  {#transition: 1s linear; opacity: 0;#}
+                  {#transition: 1s linear; opacity: 0;#}
+                }
+                .active .close:hover { transform: translate(0%, -100%) rotate(.5turn); transition: 1s ease; }
 
-    </style>
+            </style>
 
-    <div class="outer-grid" id="figures">
-    <div class="grid">
-        <div class="grid__item grid__item--big">
-            <div class="gallery">
-                <img id="img_{{ im_all }}" src='{{ im_all }}' alt="" style="width: 90%; margin-left: 10%; float: right">
+            <div class="outer-grid" id="figures">
+                <div class="grid">
+                    <div class="grid__item grid__item--big">
+                        <div class="gallery">
+                            <img id="img_{{ im_all }}" src='{{ im_all }}' alt="" style="width: 90%; margin-left: 10%; float: right">
+                        </div>
+                    </div>
+                </div>
+                <div class="grid">
+                    {% for im in images %}
+                        <div class="grid__item grid__item--small">
+                            <img id="img_{{ im }}" src='{{ im }}' alt="" style="width: 90%; margin-right: 10%; float: left">
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="grid">
-        {% for im in images %}
-            <div class="grid__item grid__item--small">
-                <img id="img_{{ im }}" src='{{ im }}' alt="" style="width: 90%; margin-right: 10%; float: left">
+            <div style="align-items: center; margin: 0 auto; text-align: center; font-size: 18px">
+                <br>
+                <label for="stations" style="font-family: 'Roboto', sans-serif;">Select
+                    station </label>
+                <select id="stations" onchange="stat()"></select>
+                <br>
+                <br>
+                <button type="submit" style="font-weight: 300; font-family: Roboto, sans-serif;" formaction="/get-vlf-data" class="btn_view" onclick="view_data()">View</button>
             </div>
-        {% endfor %}
-    </div>
-    </div>
-    <div style="align-items: center; margin: 0 auto; text-align: center; font-size: 18px">
-        <br>
-        <label for="stations" style="font-family: 'Roboto', sans-serif;">Select
-            station </label>
-        <select id="stations" onchange="stat()"></select>
-        <br>
-        <br>
-        <form method="post" id="gps">
-            <button type="submit" formaction="/get-vlf-data" class="btn_view" onclick="view_data()">View</button>
-            <input type="hidden" id="button_name" name="button_name" value="">
-            <input type="hidden" id="new_stat" name="new_stat" value="">
-            <input type="hidden" id="new_day" name="new_day" value="">
-            <input type="hidden" id="new_month" name="new_month" value="">
-            <input type="hidden" id="new_year" name="new_year" value="">
-            <input type="hidden" id="source" name="source" value="{{ source }}">
         </form>
     </div>
 
