--- a/templates/elf.html
+++ b/templates/elf.html
@@ -413,6 +413,12 @@
                 new_year.value = currentYear;
                 const button_name = document.getElementById("button_name");
                 button_name.value = 'previous';
+
+        var modal = document.getElementById('body');
+            modal.addEventListener('click',function(){
+            this.style.display="none";
+            })
+
         }
 
     </script>
