--- a/templates/data.html
+++ b/templates/data.html
@@ -295,10 +295,10 @@
 {#                <br>#}
 {#                <br>#}
                 </p>
-                <form method="post" id="vlf">
+                <form method="post" id="javad_sigma">
                     <br>
                     <button type="submit" formaction="/date-selection" class="btn" style="font-size:22px; justify-content: center; float: right">Data</button>
-                    <input type="hidden" id="source" name="source" value="vlf">
+                    <input type="hidden" id="source" name="source" value="javad_sigma">
                 </form>
                 <br>
                 <br>
